--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
         android:id="@+id/c_key"
         android:background="@color/red"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:onClick="play1"/>
 
     <Button
         style="@style/KeyStyle"
@@ -25,6 +26,7 @@
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:layout_width="match_parent"
+        android:onClick="play2"
         android:layout_height="wrap_content"/>
 
     <Button
@@ -34,6 +36,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_width="match_parent"
+        android:onClick="play3"
         android:layout_height="wrap_content"/>
 
     <Button
@@ -43,6 +46,7 @@
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
         android:layout_width="match_parent"
+        android:onClick="play4"
         android:layout_height="wrap_content"/>
 
     <Button
@@ -52,6 +56,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_width="match_parent"
+        android:onClick="play5"
         android:layout_height="wrap_content"/>
 
 
@@ -62,6 +67,7 @@
         android:layout_marginLeft="25dp"
         android:layout_marginRight="25dp"
         android:layout_width="match_parent"
+        android:onClick="play6"
         android:layout_height="wrap_content"/>
 
     <Button
@@ -71,6 +77,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_width="match_parent"
+        android:onClick="play7"
         android:layout_height="wrap_content"/>
 
 </LinearLayout>
